[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/dialogue_editor/dialogue_editor.gd" type="Script" id=1]
[ext_resource path="res://src/dialogue_editor/map.gd" type="Script" id=2]
[ext_resource path="res://src/dialogue_editor/OptionsWindow.gd" type="Script" id=3]
[ext_resource path="res://fonts/UI_default.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/UI_16.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/dialogue_editor/save.gd" type="Script" id=6]
[ext_resource path="res://src/dialogue_editor/OptionsButton.gd" type="Script" id=7]
[ext_resource path="res://src/dialogue_editor/VScrollBar.gd" type="Script" id=8]
[ext_resource path="res://fonts/lato_20.tres" type="DynamicFont" id=9]
[ext_resource path="res://sprites/backgrounds/bg.png" type="Texture" id=10]

[sub_resource type="InputEventKey" id=1]

device = 0
alt = false
shift = false
control = true
meta = false
command = true
pressed = false
scancode = 78
unicode = 0
echo = false

[sub_resource type="ShortCut" id=2]

shortcut = SubResource( 1 )
_sections_unfolded = [ "shortcut" ]

[sub_resource type="InputEventKey" id=3]

device = 0
alt = false
shift = false
control = true
meta = false
command = true
pressed = false
scancode = 79
unicode = 0
echo = false
_sections_unfolded = [ "Resource" ]

[sub_resource type="ShortCut" id=4]

shortcut = SubResource( 3 )
_sections_unfolded = [ "Resource", "shortcut" ]

[sub_resource type="Theme" id=5]

default_font = ExtResource( 5 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="InputEventKey" id=6]

device = 0
alt = false
shift = false
control = true
meta = false
command = true
pressed = false
scancode = 83
unicode = 0
echo = false
_sections_unfolded = [ "Resource" ]

[sub_resource type="ShortCut" id=7]

shortcut = SubResource( 6 )
_sections_unfolded = [ "Resource", "shortcut" ]

[sub_resource type="InputEventKey" id=8]

device = 0
alt = false
shift = true
control = true
meta = false
command = true
pressed = false
scancode = 83
unicode = 0
echo = false

[sub_resource type="ShortCut" id=9]

shortcut = SubResource( 8 )
_sections_unfolded = [ "shortcut" ]

[node name="DialogueEditor" type="Node2D" index="0"]
script = ExtResource( 1 )

[node name="Map" type="Node2D" parent="." index="0"]
script = ExtResource( 2 )

[node name="DialogueBlocks" type="Node" parent="Map" index="0"]

[node name="FrontWindows" type="CanvasLayer" parent="." index="1"]
editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="OptionsWindow" type="Control" parent="FrontWindows" index="0"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 3 )

[node name="BG" type="Control" parent="FrontWindows/OptionsWindow" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ColorRect" type="ColorRect" parent="FrontWindows/OptionsWindow/BG" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -217.0
margin_right = 251.0
margin_bottom = 216.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Material", "Rect", "Theme" ]

[node name="ColorRect3" type="ColorRect" parent="FrontWindows/OptionsWindow/BG" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -213.0
margin_right = 244.0
margin_bottom = 212.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.117647, 0.490196, 0.65098, 1 )
_sections_unfolded = [ "Material", "Rect", "Theme" ]

[node name="ColorRect2" type="ColorRect" parent="FrontWindows/OptionsWindow/BG" index="2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -209.0
margin_right = 239.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0.027451, 0.0784314, 1 )
_sections_unfolded = [ "Material", "Theme" ]

[node name="GridContainer" type="GridContainer" parent="FrontWindows/OptionsWindow" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -194.0
margin_top = -172.0
margin_right = 233.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 2

[node name="ScrollSpeedLabel" type="Label" parent="FrontWindows/OptionsWindow/GridContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 223.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SCROLL SPEED: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Custom Colors", "Custom Fonts", "Size Flags" ]

[node name="ScrollSpeedSlider" type="HSlider" parent="FrontWindows/OptionsWindow/GridContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 227.0
margin_right = 427.0
margin_bottom = 23.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 1000.0
step = 10.0
page = 0.0
value = 100.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
editable = true
scrollable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 0
_sections_unfolded = [ "Anchor", "Hint", "Margin", "Mouse", "Rect", "Size Flags" ]

[node name="ZoomSpeedLabel" type="Label" parent="FrontWindows/OptionsWindow/GridContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 27.0
margin_right = 223.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ZOOM SPEED: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Custom Colors", "Custom Fonts", "Size Flags" ]

[node name="ZoomSpeedSlider" type="HSlider" parent="FrontWindows/OptionsWindow/GridContainer" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 227.0
margin_top = 27.0
margin_right = 427.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 1.0
max_value = 2.0
step = 0.1
page = 0.0
value = 1.2
exp_edit = true
rounded = false
allow_greater = false
allow_lesser = false
editable = true
scrollable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 0
_sections_unfolded = [ "Anchor", "Hint", "Margin", "Mouse", "Rect", "Size Flags" ]

[node name="FrontUILayer" type="CanvasLayer" parent="." index="2"]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="ColorRectBG2" type="ColorRect" parent="FrontUILayer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility", "material" ]

[node name="ColorRectBG" type="ColorRect" parent="FrontUILayer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.117647, 0.490196, 0.65098, 1 )
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility", "material" ]

[node name="ColorRect" type="ColorRect" parent="FrontUILayer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.00335693, 0.029139, 0.078125, 1 )
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility", "material" ]

[node name="HBoxContainer" type="HBoxContainer" parent="FrontUILayer" index="3"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.63
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 1.0
margin_right = 278.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags" ]

[node name="New" type="Button" parent="FrontUILayer/HBoxContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 46.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Creates a new empty file."
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = SubResource( 2 )
group = null
text = "New"
flat = true
align = 1
_sections_unfolded = [ "Custom Fonts", "Focus", "Hint", "Mouse", "custom_fonts/font", "shortcut" ]

[node name="Open" type="Button" parent="FrontUILayer/HBoxContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_right = 104.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Opens a previously saved file."
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = SubResource( 4 )
group = null
text = "Open"
flat = true
align = 1
_sections_unfolded = [ "Custom Fonts", "Custom Styles" ]

[node name="Save" type="Button" parent="FrontUILayer/HBoxContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_right = 155.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Saves the current file to disk, overwriting the previously opened file.
"
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = SubResource( 7 )
group = null
text = "Save"
flat = true
align = 1
script = ExtResource( 6 )
_sections_unfolded = [ "Custom Constants", "Custom Fonts", "Theme", "Visibility", "custom_styles/normal", "theme" ]

[node name="SaveAs" type="Button" parent="FrontUILayer/HBoxContainer" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 159.0
margin_right = 227.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Saves the current file to a specified location."
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = SubResource( 9 )
group = null
text = "Save as"
flat = true
align = 1
_sections_unfolded = [ "Custom Fonts", "Hint", "shortcut" ]

[node name="Options" type="Button" parent="FrontUILayer/HBoxContainer" index="4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 231.0
margin_right = 304.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Toggle options menu."
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "Options"
flat = true
align = 1
script = ExtResource( 7 )
_sections_unfolded = [ "Anchor", "Custom Fonts", "Grow Direction", "Hint", "Margin" ]

[node name="VScrollBar" type="VScrollBar" parent="FrontUILayer" index="4"]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_top = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 0.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
custom_step = -1.0
script = ExtResource( 8 )
_sections_unfolded = [ "Focus" ]

[node name="Label" type="Label" parent="FrontUILayer/VScrollBar" index="0"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -214.0
margin_top = -43.0
margin_right = -33.0
margin_bottom = -14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
text = "(0,0)"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Custom Fonts" ]

[node name="BackUILayer" type="CanvasLayer" parent="." index="3"]
layer = -99
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="BackUIButton" type="Button" parent="BackUILayer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -47.0
margin_right = 78.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Rect" ]

[node name="BGLayer" type="CanvasLayer" parent="." index="4"]
layer = -100
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="TextureRect" type="TextureRect" parent="BGLayer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 10 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Size Flags", "texture" ]

[connection signal="pressed" from="FrontUILayer/HBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="FrontUILayer/HBoxContainer/Save" to="FrontUILayer/HBoxContainer/Save" method="_on_Save_pressed"]
[connection signal="pressed" from="FrontUILayer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="toggled" from="FrontUILayer/HBoxContainer/Options" to="FrontWindows/OptionsWindow" method="_on_Options_toggled"]
[connection signal="pressed" from="BackUILayer/BackUIButton" to="." method="_on_BackUIButton_pressed"]
